<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/titl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:hint="@string/title"
        android:background="@drawable/edit_btn"
        android:autofillHints="@string/title"
        android:textAlignment="center"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_dateTime"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/calendar" />
        <TextView
            android:id="@+id/datime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9c89b8"/>

    <EditText
        android:id="@+id/remark"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:hint="@string/remark"
        android:background="@drawable/bkg"
        android:autofillHints="@string/remark"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9c89b8"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="end"
        android:hint="@string/app_name"
        android:autofillHints="@string/app_name"
        android:text="@string/app_name"
        android:textAlignment="textEnd"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/OK"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/normal_btn"
            android:text="@string/ok" />
        <Button
            android:id="@+id/RET"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/normal_btn"
            android:text="@string/cancel" />
    </RelativeLayout>


</LinearLayout>