<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/m_menu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >
        <RadioButton
            android:id="@+id/life"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/life_states"
            android:textColor="@drawable/text_states"
            android:text="@string/life"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/work"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/work_states"
            android:textColor="@drawable/text_states"
            android:checked="true"
            android:text="@string/work"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/time_states"
            android:textColor="@drawable/text_states"
            android:text="@string/timer"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/play_states"
            android:textColor="@drawable/text_states"
            android:text="@string/play"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/others"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/others_states"
            android:textColor="@drawable/text_states"
            android:text="@string/others"
            android:textSize="18sp" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/m_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/m_menu"
        android:background="@android:color/transparent" >

    </FrameLayout>

</RelativeLayout>